@@ -1,3 +1,4 @@
+3/5/14 restore 'ratio' feature in production version
 3/5/14 #25 ratio performance enhancements: use Float32Array if available, pre-allocate max array size, replace Util.toFixedNumber with Math.round
 3/5/14 #25 ratio: store molecule locations so that they don't move when solution volume changes and pH remains constant
 3/5/14 #24 ratio: added workaround for clipping issue, general problem is scenery#200
